fixed css height to avoid jumping of content while loading. linked analytics shell screenshot

--- a/public/stylesheets/ohai_096.css
+++ b/public/stylesheets/ohai_096.css
@@ -36,6 +36,10 @@ a:hover {
   margin: 0px auto;
 }
 
+#top {
+  height: 620px;
+}
+
 .teaser-two {
   font-family: 'Armata', sans-serif;
   margin-top: 10px;
